--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "app.js",
   "scripts": {
-    "start": "nodemon app.js"
+    "start": "tsc && nodemon ./dist/app.js",
+    "build": "tsc"
   },
   "keywords": [],
   "author": "",
